testsuite/tests/name_resolution/xref_eq_proc_call_2/test.out
Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:8:4-8:11>
*****************************************************

Expr: <CallExpr test.adb:8:4-8:10>
  references:    <DefiningName "A" test.adb:3:14-3:15>
  type:          None
  expected type: None
Expr: <Id "A" test.adb:8:4-8:5>
  references:    <DefiningName "A" test.adb:3:14-3:15>
  type:          None
  expected type: None
Expr: <Int test.adb:8:7-8:9>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] in Standard>
  expected type: <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>

Resolving xrefs for node <AssignStmt test.adb:11:4-11:16>
*********************************************************

Expr: <Id "B" test.adb:11:4-11:5>
  references:    <DefiningName "B" test.adb:6:4-6:5>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: None
Expr: <CallExpr test.adb:11:9-11:15>
  references:    <DefiningName "C" test.adb:4:13-4:14>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
Expr: <Id "C" test.adb:11:9-11:10>
  references:    <DefiningName "C" test.adb:4:13-4:14>
  type:          <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>
  expected type: None
Expr: <Int test.adb:11:12-11:14>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] in Standard>
  expected type: <ConcreteTypeDecl ["Int"] test.adb:2:4-2:31>

Resolving xrefs for node <CallStmt test.adb:14:4-14:11>
*******************************************************

Name resolution failed as expected with:

test.adb:14:4: error: resolution failed
14 |    C (12);
   |    ^^^^^^^



Done.
